examples/invalid/semanticErr/while/truErr.wacc
# true typo
# Output:
# #syntax error#

#Program:#

begin
  while tru do
    skip
  done
end
